#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-12-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.80 released.

        * Version 0.79 failed to contain changes listed


2010-12-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.79 released.

        * Fixed logic to find module build dir in Makefile.PL

        * Fixed timeout bug in output parser

        * Added alarm timeout for password function when ssh
          makes new connection and dialogue asks for permission
          to connect. Timeout is used for when FullAuto runs in
          cron, or on a server by another process or service with
          no user interaction. The situation can be remedied by
          using the --authorize_connect argument when first
          connecting to a new remote host.

        * Cleaned up a slew of unused variables in FA_Core.pm


2010-12-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.78 released.

        * Added ncurses and libdb4.5-devel to Cygwin install
          in Makefile.PL


2010-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.77 released.

        * Added tests to find gzip, tar and make for cygwin in
          Makefile.PL


2010-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.76 released.

        * Changed bash -ic to bash -lc for cygwin setup in
          Makefile.PL

        * Fixed uniq capture

        * Added override package for LWP::UserAgent to improve
          compatibility with older CPAN installations


2010-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.75 released.
