@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 3e4050aedeb139dad07ea3228465ec1dcb4c34c6 ChangeLog
+SHA1 c5b26601db15a68d8777aea25db81d26f2bcd127 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 f33a524126bd793e01b2a4a92db6b833b0226a8f MANIFEST
-SHA1 afeb5123a6c50b532e4f795ff89bffc9fccb39b7 META.yml
-SHA1 a135c8d7a253d4c244247389b5a80deb6c6190b7 Makefile.PL
+SHA1 23b3a8d47616437605eb61ac2a324967ba472283 META.yml
+SHA1 fd7f436929663ccf81b7707d5c3434cb763aaae3 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 a2f91f4e913e94ade68cbbc6ae9abfb457e4f00d lib/Net/FullAuto.pm
+SHA1 97e2e9312f5807e79aa13c21b47366d3371dca7b lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -41,13 +41,13 @@ SHA1 9783a046faea98fe0ba53f6397a4e264c06e6db8 lib/Net/FullAuto/Distro/fa_conf.pm
 SHA1 0fa60c2ccca0f609c1b13d22b5e84d45e1934c47 lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 15e1ceb275d7f2097fbb544ca104b1928b3869a5 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 6a2d8ed8dfce8911f59664197b3c5febbd5de349 lib/Net/FullAuto/Distro/fa_menu.pm
-SHA1 a4869d91a4550a2d43785d573a8a34bf375850d1 lib/Net/FullAuto/FA_Core.pm
+SHA1 a537750be6486d27cf369deaa8f2ff85b1a037a5 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk0I758ACgkQdsVAdUjO9ImaiQCeIwKx+5Bg29mbrQahQOv/Gv9r
-3MMAoJbbfYwUKIpOn0fGqgxxeMg1IgKa
-=7D2b
+iEYEARECAAYFAk0KjAQACgkQdsVAdUjO9Ili3wCeO8RZhH++i2Uz9ezdJe5RY9P2
+2+MAoIR+kqecOm432z8Ku4w7of9Wu0Gk
+=Ga4g
 -----END PGP SIGNATURE-----
