@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.80';
+our $VERSION='0.81';
 
 
 use 5.005;
